# teledetection

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENSE  README.md  RELEASE_NOTES.txt  mkdocs.yml  pyproject.toml
doc/: access.md  additional_resources.md  advanced.md  authentication.md  cli-ref.md  credentials.md  doc_requirements.txt  gen_ref_pages.py  getting_started.md  index.md  policies.md  publish.md  sample.md  sample.py  upload.md
doc/examples/: __init__.py  basic.md  processing_examples_pyotb.md  processing_examples_rasterio.md  pyotb_ndvi_loss.py  pyotb_toa_mosaic.py  rio_metadata.py  rio_ndvi.py
doc/stylesheets/: extra.css
teledetection/: __init__.py  cli.py
teledetection/sdk/: __init__.py  files.py  http.py  logger.py  model.py  oauth2.py  settings.py  signing.py  upload.py  utils.py
teledetection/upload/: __init__.py  diff.py  raster.py  stac.py  transfer.py
tests/: Dockerfile.tests  docker-compose.yml  raster3.vrt  sdk_tests.py  test_cli.py  test_diff.py  test_get.py  test_sdk.py  test_settings.py  test_upload.py  utils.py
